fix.client: drawer image, drawer overflow, dialog transition

--- a/client/src/assets/style/main.scss
+++ b/client/src/assets/style/main.scss
@@ -20,6 +20,7 @@ html, body {
 
 .no-underline, .no-undeline a {
 	text-decoration: none;
+	transition: .3s;
 }
 
 .card-hover:hover {
